# solar

./: .gitmodules  README.md
jupiter/: .gitignore  .travis.yml  readme.md
jupiter/AndroidSailingLib/: settings.gradle
jupiter/AndroidSailingLib/demo/: build.gradle
jupiter/deprecated/webs/: makefile
jupiter/deprecated/wowoo-miniapp-wx/: readme.md
jupiter/incubator/catapult/: .gitignore
jupiter/incubator/ereading/: readme.md  requirements.txt  run.py  scheduled_task.py  server.py  setting.py
jupiter/incubator/wowoo-miniapp-wx/: app.js  app.json  project.config.json
jupiter/resource/images-ai/: 11款创意海洋动物设计矢量素材.ai  12款创意非洲野生动物矢量素材.ai  6款卡通万圣节蝙蝠矢量素材.ai  9款圆形加载icons.ai  9款彩色鱼类设计矢量素材.ai  Untitled-2.ai  animals-cover-a.ai  animals-cover-b.ai  ereading.ai  horse.eps  panda.eps  可爱动物集合.ai  圆形质感按钮icons.ai  彩绘秋季刺猬矢量素材.ai
mars/pymars/: .gitignore  MANIFEST.in  README.md  cmd.py  setup.py
mars/pymars/antenna/: README.md
mars/pymars/cmd/: main.py
mars/pymars/image/: onnx_helper.py  torch_helper.py  utils.py
mars/pymars/utils/: circletrain.py  common.py  dict2obj.py  document.py  errors.py
mars/samples/: make_category.py  removebg.py
mars/samples/animals-wow/: html_parser.py  img_resizer.py
mars/samples/benchmark/: dbs.py  redisinst.py
mars/samples/pdfchecker/: check_documents.py
mars/samples/portalflask/: app.py  requirements.txt  run.py
mars/samples/pytorch/: exps_image.py  n-lifes.py
mars/samples/spider/: spider_konachan.py  spider_pixabay.py  spider_proxies_adapter.py  spider_wallpaper_.py
mars/samples/temp/: AntiApkTools.py  FontMaskForWidgetAnim.py  XcAssetsModifier.py  anit_shent.py  anti-virus.py  anti_virus_ember.py  anti_virus_peminer.py  classify.multi.py  github_getter.py  github_url_windows Batchfile.1  illegal_char.py  ole_test.py  pcodedmp.py  press_test_by_locust.py  program_lang_classifier.py  prolang_classifier.py  spider_pexels.py  spider_proxies_adapter.py
mercury/magic_android/MagicAndroid/: settings.gradle
mercury/magic_apple/: .gitignore
mercury/magic_apple/IosScaffold/: Podfile  README.md
mercury/magic_apple/MaCommonPackage/: Package.swift  README.md
mercury/magic_apple/MaSpmTool/: Package.resolved  Package.swift  README.md
mercury/magic_apple/MaUtilFrame/: Podfile  PostAction.sh
mercury/magic_apple/MaUtilKit/: Podfile
mercury/magic_apple/MaUtilPkg/: Package.swift  README.md
mercury/magic_apple/MagicApple.xcworkspace/: contents.xcworkspacedata
mercury/package/: .gitignore
mercury/package/env_scripts/: deploy_blog_every15min.sh  makefile  readme.md
mercury_back/package/: readme.md
neptune.old/go_test/: timeout.go
uranus/: .gitignore
venus/: .gitignore  README.md
venus/cilab/: cilab.sln
venus/cilab/cilab/: cilab.aps  cilab.cpp  cilab.vcxproj  cilab.vcxproj.filters  resource.h
venus/common/: CMakeLists.txt  README.md  utils.h
venus/common/3rds/: aes.cpp  aes.h  base64.cpp  base64.h  crc16.cpp  crc16.h  rc4.cpp  rc4.h  sha1.h  sha224.cpp  sha224.h  sha256.h  sha384.cpp  sha384.h  sha512.h
venus/common/3rds/gflags_2.2.2/windows/lib_md_32_debug/: gflags_static_debug.lib
venus/common/3rds/gflags_2.2.2/windows/lib_md_32_release/: gflags_static.lib
venus/common/3rds/gflags_2.2.2/windows/lib_mt_32_debug/: gflags_static_debug.lib
venus/common/3rds/gflags_2.2.2/windows/lib_mt_32_release/: gflags_static.lib
venus/common/3rds/gtest_1.11.0/windows/lib_mt_32_debug/: gtest_maind.lib
venus/common/3rds/gtest_1.11.0/windows/lib_mt_32_release/: gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib
venus/common/3rds/opencv/x86/vc16/lib/: opencv_dnn440.lib  opencv_gapi440.lib  opencv_ml440.lib
venus/common/3rds/opencv/x86d/vc16/lib/: opencv_dnn440d.lib
venus/common/3rds/zip/: README.md
venus/common/3rds/zlib_1.2.11/windows/lib_md_32_debug/: zlibstaticd.lib
venus/common/3rds/zlib_1.2.11/windows/lib_md_32_release/: zlibstatic.lib
venus/common/3rds/zlib_1.2.11/windows/lib_mt_32_debug/: zlibstaticd.lib
venus/common/3rds/zlib_1.2.11/windows/lib_mt_32_release/: zlibstatic.lib
venus/common/3rds/zlib_1.2.11/windows/lib_mt_64_debug/: zlibstaticd.lib
venus/common/3rds/zlib_1.2.11/windows/lib_mt_64_release/: zlibstatic.lib
venus/common/file/: chartype.h  filetype.cpp  filetype.h  filetype_define.h  filetype_text.cpp  ifile.h  memfile.h  simplefile.cpp  simplefile.h  struct_ms_lnk.h  struct_ole.h  types.h  zip_parser_simple.h
venus/common/file/struct_ace/: README.md  acestruc.h  all.h
venus/common/file/struct_ace/lfn/: lfn.h
venus/common/file/struct_elf/: elf.h
venus/common/file/struct_java_cls/: java_cls.h
venus/common/file/struct_mach/: fat.h  machine.h  macho.h
venus/common/file/struct_nt/: ntimage.h  poppack.h  pshpack1.h  pshpack2.h  pshpack4.h  pshpack8.h
venus/common/file/struct_rar/: README.md
venus/common/matcher/: matcher_ac.h  matcher_bm.cpp  matcher_bm.h
venus/common/office/: cfb_base.h  clsid.h  errors.h  helper.h  mhtml.h  ms_activemine.h  ms_biff.cpp  ms_biff.h  ms_doc.cpp  ms_doc.h  ms_oleds.h  ms_other.cpp  ms_other.h  ms_ppt.cpp  ms_ppt.h  ms_shellink.cpp  ms_shellink.h  ms_vba.cpp  ms_vba.h  ms_vba_pcode.cpp  ms_vba_pcode.h  ms_xls.cpp  ms_xls.h  offcrypto.cpp  offcrypto.h  offcrypto_assist.h  offcrypto_binary.cpp  offcrypto_defines.h  offcrypto_ds.cpp  offcrypto_ds.h  offcrypto_ecma376.cpp  ole.cpp  ole.h  ole_utils.cpp  ole_utils.h  ole_walker.cpp  ole_walker.h  ooxml.cpp  ooxml.h  ooxml_data.h  (+6 more)
venus/common/utils/: bitmap.h  codepage.h  hash.h  scope_guard.h  utils.h
venus/common_test/: CMakeLists.txt  CMakeSettings.json  helper.h  main.cpp  t_doc.cpp  t_ecma.cpp  t_encryption.cpp  t_mht.cpp  t_ole.cpp  t_pcode.cpp  t_ppt.cpp  t_rle.cpp  t_scanner.cpp  t_xls.cpp
venus/docs/matting/: README.md
venus/include/common/: sha1.hpp  sha256.h  utils.h
venus/samples/filetype/: detector.cpp  detector.h
venus/samples/filetyper/: CMakeLists.txt  checker.cpp  filetyper.cpp  filetyper.vcxproj  filetyper.vcxproj.filters  helper.h  simple_helper.h
venus/samples/hello/: hello  hello.cpp
venus/samples/myocr/: myocr.sln
venus/venus/include/: opencv.h
(+445 files in other folders)
